# pratice

./: .gitignore  .replit  CMakeLists.txt  README.md
.ccls-cache/@@home@runner@workspace/: @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stdarg___gnuc_va_list.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_null.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_size_t.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@__stddef_wchar_t.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@stdarg.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@stdbool.h.blob  @nix@store@2j35g928qczhj13kfi7yxm09wg2jiv14-clang-18.1.8-lib@lib@clang@18@include@stddef.h.blob  @nix@store@4krab2h0hd4wvxxmscxrw21pl77j4i7j-gcc-13.3.0@include@c++@13.3.0@bits@std_abs.h.blob  @nix@store@4krab2h0hd4wvxxmscxrw21pl77j4i7j-gcc-13.3.0@include@c++@13.3.0@cstdlib.blob  @nix@store@4krab2h0hd4wvxxmscxrw21pl77j4i7j-gcc-13.3.0@include@c++@13.3.0@pstl@pstl_config.h.blob  @nix@store@4krab2h0hd4wvxxmscxrw21pl77j4i7j-gcc-13.3.0@include@c++@13.3.0@stdlib.h.blob  @nix@store@4krab2h0hd4wvxxmscxrw21pl77j4i7j-gcc-13.3.0@include@c++@13.3.0@x86_64-unknown-linux-gnu@bits@c++config.h.blob  @nix@store@lw21wr626v5sdcaxxkv2k4zf1121hfc9-glibc-2.40-36-dev@include@alloca.h.blob  (+57 more)
0_prepratice/: 3.c  5.c  6.c  README.md
1/: 1.cpp  2.cpp
1_basic/: 1.c  2.c  3.c  README.md
(+6 files in other folders)
