cmake_minimum_required(VERSION 3.10)
project(pratice)

set(CMAKE_CXX_STANDARD 17)
set(SRC0 "0_prepratice")
set(SRC1 "1_basic")

add_executable(0_1 ${SRC0}/1.c)
add_executable(0_2 ${SRC0}/2.c)
add_executable(0_3 ${SRC0}/3.c)
add_executable(0_4 ${SRC0}/4.c)
add_executable(0_5 ${SRC0}/5.c)
add_executable(0_6 ${SRC0}/6.c)

add_executable(1_1 ${SRC1}/1.c)
add_executable(1_2 ${SRC1}/2.c)
#add_executable(1_3 ${SRC1}/3.c)
#add_executable(1_4 ${SRC1}/4.c)
#add_executable(1_5 ${SRC1}/5.c)
#add_executable(1_6 ${SRC1}/6.c)